# Gensokyo

./: .gitattributes  .travis.yml  Cargo.toml  LICENSE  README.md
examples/Eg01.basic/: Cargo.toml  README.md  run-all.sh
examples/Eg01.basic/shaders/: texture.frag.spv
examples/Eg01.basic/src/01.triangle/: gensokyo.toml  main.rs  triangle.vert.spv
examples/Eg01.basic/src/02.index/: hakurei.toml  index.vert.glsl  main.rs
examples/Eg01.basic/src/03.staging/: main.rs
examples/Eg01.basic/src/03.uniform/: gensokyo.toml  main.rs  uniform.vert
examples/Eg01.basic/src/04.texture/: hakurei.toml  main.rs  texture.frag  texture.frag.glsl  texture.vert.glsl
examples/Eg01.basic/src/04.uniform/: main.rs
examples/Eg01.basic/src/05.box/: data.rs  main.rs
examples/Eg01.basic/src/05.cube/: data.rs  gensokyo.toml  hakurei.toml  main.rs  program.rs
examples/Eg01.basic/src/05.texture/: main.rs
examples/Eg01.basic/src/06.box/: main.rs
examples/Eg01.basic/src/06.depth/: data.rs  depth.vert  depth.vert.glsl  hakurei.toml  main.rs  program.rs
examples/Eg01.basic/src/07.model/: data.rs  hakurei.toml  main.rs  model.frag  model.vert  program.rs
examples/Eg01.basic/textures/: .gitignore
examples/Eg02.gltf/: Cargo.toml
examples/Eg02.gltf/src/: gensokyo.toml  lib.rs  program.rs
examples/Eg02.gltf/src/01.triangle/: data.rs  gensokyo.toml  input_desc.rs  main.rs  program.rs  triangle.frag  triangle.frag.glsl  triangle.gltf  triangle.vert
examples/Eg02.gltf/src/02.box/: Box.gltf  box.frag  box.frag.glsl  box.vert  input_desc.rs  main.rs
examples/vk-examples/: Cargo.toml  README.md
examples/vk-examples/models/: armor.gltf  color_teapot_spheres.gltf  cube.gltf  geosphere.gltf  plane.gltf  samplescene.gltf  tunnel_cylinder.gltf
examples/vk-examples/src/: lib.rs
examples/vk-examples/src/deferred/: Gensokyo.toml  debug.frag.glsl  main.rs  (+11 more)
gensokyo/: Cargo.toml
gensokyo-vulkan/: Cargo.toml
gensokyo-vulkan/src/: error.rs  lib.rs
gensokyo-vulkan/src/buffer/: barrier.rs  entity.rs  error.rs  mod.rs  repository.rs  target.rs  traits.rs
gensokyo-vulkan/src/command/: buffer.rs  compute.rs  copy.rs  error.rs  graphics.rs  infos.rs  mod.rs  pool.rs  record.rs  traits.rs  transfer.rs
gensokyo-vulkan/src/core/: config.rs  error.rs  instance.rs  mod.rs  platforms.rs  surface.rs
gensokyo-vulkan/src/descriptor/: binding.rs  entity.rs  enums.rs  error.rs  layout.rs  mod.rs  pool.rs  repository.rs  set.rs  types.rs
gensokyo-vulkan/src/image/: barrier.rs  compress.rs  copy.rs  entity.rs  enums.rs  error.rs  format.rs  mipmap.rs  mod.rs  repository.rs  sampler.rs  storage.rs  target.rs  traits.rs  utils.rs  view.rs
gensokyo-vulkan/src/memory/: barrier.rs  error.rs  filter.rs  mod.rs  selector.rs  target.rs  traits.rs  types.rs  utils.rs
gensokyo-vulkan/src/pipeline/: config.rs  error.rs  graphics.rs  layout.rs  mod.rs  push_constant.rs  target.rs
gensokyo-vulkan/src/prelude/: api.rs  buffer.rs  command.rs  common.rs  descriptor.rs  image.rs  mod.rs  pipeline.rs  sync.rs
gensokyo-vulkan/src/sync/: error.rs  fence.rs  mod.rs  semaphore.rs
gensokyo-vulkan/src/types/: common.rs  format.rs  mod.rs
gensokyo-vulkan/src/utils/: allot.rs  assign.rs  cast.rs  format.rs  memory.rs  mod.rs  phantom.rs  wrapper.rs
gensokyo/src/: error.rs  lib.rs
gensokyo/src/assets/: error.rs  mod.rs
gensokyo/src/config/: engine.rs  error.rs  manifest.rs  mod.rs  window.rs
gensokyo/src/initialize/: allocator.rs  command.rs  initializer.rs  mod.rs  pipeline.rs  sync.rs  traits.rs
gensokyo/src/input/: action.rs  key.rs  keycode.rs  mod.rs
gensokyo/src/prelude/: mod.rs
gensokyo/src/procedure/: chain.rs  context.rs  env.rs  error.rs  loader.rs  loops.rs  mod.rs  window.rs  workflow.rs
gensokyo/src/toolkit/: allocator.rs  command.rs  mod.rs  pipeline.rs  sync.rs
gensokyo/src/utils/: fps.rs  mod.rs  shortcuts.rs  time.rs  types.rs
hakurei/: Cargo.toml
hakurei-vulkan/: Cargo.toml
hakurei-vulkan/src/: lib.rs
hakurei-vulkan/src/buffer/: barrier.rs  entity.rs  error.rs  mod.rs  repository.rs  target.rs  traits.rs
hakurei-vulkan/src/command/: buffer.rs  error.rs  infos.rs  mod.rs  pool.rs  record.rs
hakurei-vulkan/src/core/: config.rs  debug.rs  error.rs  instance.rs  mod.rs  platforms.rs  surface.rs
hakurei-vulkan/src/descriptor/: binding.rs  entity.rs  enums.rs  layout.rs  mod.rs  pool.rs  repository.rs  set.rs
hakurei-vulkan/src/image/: barrier.rs  entity.rs  enums.rs  error.rs  mod.rs  repository.rs  sampler.rs  storage.rs  target.rs  traits.rs  utils.rs  view.rs
hakurei-vulkan/src/memory/: barrier.rs  error.rs  mod.rs  selector.rs  structs.rs  target.rs  traits.rs  types.rs
hakurei-vulkan/src/pipeline/: config.rs  error.rs  layout.rs  mod.rs  stages.rs
hakurei-vulkan/src/resources/: error.rs  mod.rs
hakurei-vulkan/src/sync/: error.rs  fence.rs  mod.rs  semaphore.rs
hakurei-vulkan/src/types/: format.rs
hakurei-vulkan/src/utils/: cast.rs  format.rs  marker.rs  memory.rs  mod.rs  types.rs  wrapper.rs
hakurei/src/: lib.rs  prelude.rs
hakurei/src/assets/: mod.rs
hakurei/src/config/: camera.rs  core.rs  default.rs  engine.rs  env.rs  error.rs  image.rs  input.rs  macros.rs  manifest.rs  mod.rs  prelude.rs  shaderc.rs  time.rs  window.rs
hakurei/src/constant/: image.rs  mod.rs  swapchain.rs
hakurei/src/core/: debug.rs  error.rs  instance.rs  mod.rs  platforms.rs  surface.rs
hakurei/src/input/: action.rs  key.rs  keycode.rs  mod.rs  mouse.rs  prelude.rs
hakurei/src/pipeline/: enums.rs  error.rs  layout.rs  mod.rs  stages.rs
hakurei/src/prelude/: config.rs  input.rs  mod.rs  pipeline.rs  queue.rs  resources.rs  sync.rs  utility.rs
hakurei/src/procedure/: chain.rs  env.rs  error.rs  loader.rs  loops.rs  mod.rs  window.rs  workflow.rs
hakurei/src/resources/: error.rs  mod.rs
hakurei/src/sync/: fence.rs  mod.rs  prelude.rs  semaphore.rs
hakurei/src/toolkit/: allocator.rs  command.rs  pipeline.rs
hakurei/src/utility/: cast.rs  dimension.rs  fps.rs  marker.rs  memory.rs  mod.rs  wrapper.rs
hakurei/src/utils/: fps.rs  mod.rs  shortcuts.rs  time.rs
(+840 files in other folders)
