
[package]
name        = "gensokyo"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
description = "Rendering Engine implemented in Vulkan and Rust."
license     = "MIT"
keywords    = ["Vulkan", "Rust", "Graphics"]

[dependencies]
winit        = "0.18.0" # winit is a window creation and management library.
ash          = "0.27.1" # ash is the vulkan bindings for Rust.
num          = "0.2"    # num crate is a collection of numeric types and traits for Rust.
image        = "0.20"   # image crate provides basic imaging processing functions and methods for converting to and from image formats.
memoffset    = "0.2"    # memoffset provides C-Like offset_of functionality for Rust structs.
smallvec     = "0.6.5"  # smallvec store up to a small number of items on the stack to provide optimization for Rust.
nalgebra     = "0.16"   # Linear algebra library with transformations and statically-sized or dynamically-sized matrices.
toml         = "0.4"    # A TOML-parsing library, use to read engine configuration.
gltf         = "0.11.2" # gltf loader.
serde        = "1.0.80" # A generic serialization/deserialization framework.
serde_derive = "1.0.80" # Macros implementation of #[derive(Serialize, Deserialize)].
# error-chain = "0.12.0" # Consistent error handling for Rust.
# rayon = "1.0.2" # Rayon is a data-parallelism library for Rust.

gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../gensokyo-vulkan" }
gensokyo-macros = { package = "gensokyo-macros", path = "../gensokyo-macros" }

# gsvk = { package = "gensokyo-vulkan", path = "../gensokyo-vulkan" }
# gsma = { package = "gensokyo-macros", path = "../gensokyo-macros" }
