
[package]
name = "gensokyo-ex01-baisc"
version = "0.1.0"
authors = ["usami-renko <usami-ssc@protonmail.com>"]
description = "Basic examples of gensokyo Engine."

[dependencies]
ash = "0.26.0"
gensokyo-vulkan = { path = "../../gensokyo-vulkan" }
gensokyo-macros = { path = "../../gensokyo-macros" }
gensokyo = { path = "../../gensokyo" }
cgmath = "0.16.1"

[[bin]]
name = "01"
path = "src/01.triangle/main.rs"

[[bin]]
name = "02"
path = "src/02.index/main.rs"

[[bin]]
name = "03"
path = "src/03.uniform/main.rs"

[[bin]]
name = "04"
path = "src/04.texture/main.rs"

[[bin]]
name = "05"
path = "src/05.cube/main.rs"

[[bin]]
name = "06"
path = "src/06.depth/main.rs"

#[[bin]]
#name = "07"
#path = "src/07.model/main.rs"
