
[package]
name        = "gensokyo-eg01-baisc"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
description = "Basic examples of gensokyo Engine."

[dependencies]

gensokyo = { package = "gensokyo", path = "../../gensokyo" }
gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
gensokyo-macros = { package = "gensokyo-macros", path = "../../gensokyo-macros" }

# gs   = { package = "gensokyo", path = "../../gensokyo" }
# gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
# gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
ash      = "0.26.0"
nalgebra = "0.16"


[[bin]]
name = "01"
path = "src/01.triangle/main.rs"

[[bin]]
name = "02"
path = "src/02.index/main.rs"

[[bin]]
name = "03"
path = "src/03.uniform/main.rs"

[[bin]]
name = "04"
path = "src/04.texture/main.rs"

[[bin]]
name = "05"
path = "src/05.cube/main.rs"

[[bin]]
name = "06"
path = "src/06.depth/main.rs"
