
[package]
name        = "example02"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
description = "Gltf examples of gensokyo Engine."

[dependencies]
gensokyo = { package = "gensokyo", path = "../../gensokyo" }
gensokyo-vulkan = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
gensokyo-macros = { package = "gensokyo-macros", path = "../../gensokyo-macros" }

ash = "0.26.0"
nalgebra = "0.16"
toml = "0.4"

[[bin]]
name = "01"
path = "src/01.triangle/main.rs"

[[bin]]
name = "02"
path = "src/02.box/main.rs"
