
[package]
name        = "example02"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
workspace   = "../.."
description = "glTF examples of gensokyo Engine."

[dependencies]
gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
gs   = { package = "gensokyo", path = "../../gensokyo" }

ash = "0.27.1"
nalgebra = "0.16"

[[bin]]
name = "01"
path = "src/01.triangle/main.rs"

[[bin]]
name = "02"
path = "src/02.box/main.rs"
