
[package]
name        = "vk-examples"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
description = "A Rust implementation of Vulkan Examples(https://github.com/SaschaWillems/Vulkan) via Gensokyo Engine."

[dependencies]
gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
gs   = { package = "gensokyo", path = "../../gensokyo" }

ash         = "0.27.1"
nalgebra    = "0.16"
lazy_static = "1.2.0"

[[bin]]
name = "triangle"
path = "src/triangle/main.rs"
