
[package]
name        = "vk-examples"
version     = "0.1.0"
authors     = ["usami-renko <usami-ssc@protonmail.com>"]
edition     = "2018"
description = "A Rust implementation of Vulkan Examples(https://github.com/SaschaWillems/Vulkan) via Gensokyo Engine."

[dependencies]
gsma = { package = "gensokyo-macros", path = "../../gensokyo-macros" }
gsvk = { package = "gensokyo-vulkan", path = "../../gensokyo-vulkan" }
gs   = { package = "gensokyo", path = "../../gensokyo" }

ash          = "0.27.1"
nalgebra     = "0.16"
lazy_static  = "1.2.0"
serde        = "1.0.80"
serde_derive = "1.0.80"
bincode      = "1.0.1"
rand         = "0.6"

# Basics ----------------------------------------------
[[bin]]
name = "triangle"
path = "src/triangle/main.rs"

[[bin]]
name = "pipelines"
path = "src/pipelines/main.rs"

[[bin]]
name = "descriptorsets"
path = "src/descriptorsets/main.rs"

[[bin]]
name = "dynamicuniformbuffer"
path = "src/dynamicuniformbuffer/main.rs"

[[bin]]
name = "pushconstants"
path = "src/pushconstants/main.rs"

[[bin]]
name = "specializationconstants"
path = "src/specializationconstants/main.rs"

[[bin]]
name = "texture"
path = "src/texture/main.rs"
# -----------------------------------------------------

#  Advanced -------------------------------------------
[[bin]]
name = "texturemipmapgen"
path = "src/texturemipmapgen/main.rs"
# -----------------------------------------------------

# Physically Based Rendering --------------------------
[[bin]]
name = "pbrbasic"
path = "src/pbrbasic/main.rs"
# -----------------------------------------------------
